Добавлен вывод комментариев в виде иерархии

--- a/MirKvartir/appsettings.json
+++ b/MirKvartir/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "data source=DESKTOP-1488\\SQLEXPRESS; initial catalog=MirKvartirDB; integrated security=True; MultipleActiveResultSets=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
